# clcc

./: CMakeLists.txt  LICENSE  README  README.md  clcc.cbp  clcc.depend  clcc.layout  clcc.sln  cmake_make.sh
clcc/: CMakeLists.txt  OpenCLUtils.cpp  OpenCLUtils.h  clcc.c  clcc.cpp  clcc.vcproj  clcc.vcxproj  clcc.vcxproj.filters  compiler.c  compiler.h  load_compiler_unx.c  load_compiler_unx.cpp  load_compiler_win.c  load_compiler_win.cpp
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml
