cmake_minimum_required (VERSION 3.6)
IF (CYGWIN)
    add_executable(clcc clcc.cpp compiler.cpp load_compiler_win.cpp OpenCLUtils.cpp)
    link_directories(/cygdrive/c/Intel/OpenCL/sdk/lib/)
    add_library(other STATIC IMPORTED)
    set_property(TARGET other PROPERTY IMPORTED_LOCATION /cygdrive/c/Intel/OpenCL/sdk/lib/x64/OpenCL.lib)
    SET (CMAKE_FIND_LIBRARY_SUFFIXES ".lib" ".LIB" ".dll" ".DLL")
    find_library(OPENCL_LIBRARY OpenCL PATHS /cygdrive/c/Intel/OpenCL/sdk/lib/)
    #target_link_libraries(clcc ${CMAKE_DL_LIBS} OpenCL.lib)
    target_include_directories(clcc PUBLIC /cygdrive/c/Intel/OpenCL/sdk/include)
    target_link_libraries(clcc PUBLIC ${CMAKE_DL_LIBS} other)
    #target_link_libraries(clcc PUBLIC )
ELSE (CYGWIN)
    add_executable(clcc clcc.cpp compiler.cpp load_compiler_unx.cpp)
    find_package(OpenCL REQUIRED)
    target_link_libraries(clcc ${CMAKE_DL_LIBS} OpenCL::OpenCL)
ENDIF (CYGWIN)
install(TARGETS clcc DESTINATION bin)
